--- a/sim/ghdl/Makefile
+++ b/sim/ghdl/Makefile
@@ -6,6 +6,7 @@ SRC_TEST_VHDL_PATH=../../src/test/vhdl
 
 TEST_BENCH = dummy_plug_reader_test_1 \
              dummy_plug_axi4_test_1   \
+             dummy_plug_axi4_test_2   \
              $(END_LIST)
 
 all: $(TEST_BENCH)
@@ -17,8 +18,8 @@ clean:
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
 $(TEST_BENCH) : $(addsuffix .o,$(TEST_BENCH))
-	 $(GHDL) -e $(GHDLFLAGS) --work=$(WORK) $@
-	-$(GHDL) -r $(GHDLFLAGS) --work=$(WORK) $@
+	 $(GHDL) -e $(GHDLFLAGS) --work=work $@
+	-$(GHDL) -r $(GHDLFLAGS) --work=work $@
 
 
 DUMMY_PLUG_CORE_SRC_PATH = $(SRC_MAIN_VHDL_PATH)/dummy_plug
@@ -53,11 +54,13 @@ DUMMY_PLUG_AXI4          = $(DUMMY_PLUG_CORE)         \
                            axi4_master_player.o       \
                            axi4_slave_player.o        \
                            axi4_signal_printer.o      \
+                           axi4_rw_signal_printer.o   \
                            $(END_LIST)
 
 axi4_core.o                : axi4_types.o $(DUMMY_PLUG_CORE_PACKAGE)
 axi4_models.o              : axi4_types.o $(DUMMY_PLUG_CORE_PACKAGE)
 axi4_signal_printer.o      : axi4_types.o $(DUMMY_PLUG_CORE_PACKAGE)
+axi4_rw_signal_printer.o   : axi4_types.o $(DUMMY_PLUG_CORE_PACKAGE)
 axi4_channel_player.o      : axi4_types.o axi4_core.o 
 axi4_core_player.o         : axi4_types.o axi4_core.o axi4_channel_player.o
 axi4_master_player.o       : axi4_types.o axi4_core.o axi4_core_player.o
@@ -87,9 +90,18 @@ axi4_slave_player.o        : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_slave_player.vhd
 axi4_signal_printer.o      : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_signal_printer.vhd  
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
+axi4_rw_signal_printer.o   : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_rw_signal_printer.vhd  
+	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
+
 
 dummy_plug_reader_test_1.o : $(SRC_TEST_VHDL_PATH)/dummy_plug/reader_test_1.vhd $(DUMMY_PLUG_CORE)
-	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
+	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
 
 dummy_plug_axi4_test_1.o   : $(SRC_TEST_VHDL_PATH)/dummy_plug/axi4_test_1.vhd   $(DUMMY_PLUG_AXI4)
-	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
+	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
+
+axi_master_bfm.o           : $(SRC_TEST_VHDL_PATH)/dummy_plug/axi_master_bfm.vhd
+	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
+
+dummy_plug_axi4_test_2.o   : $(SRC_TEST_VHDL_PATH)/dummy_plug/axi4_test_2.vhd   axi_master_bfm.o $(DUMMY_PLUG_AXI4)
+	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
