--- a/sim/ghdl/Makefile
+++ b/sim/ghdl/Makefile
@@ -54,17 +54,14 @@ DUMMY_PLUG_AXI4          = $(DUMMY_PLUG_CORE)         \
                            axi4_master_player.o       \
                            axi4_slave_player.o        \
                            axi4_signal_printer.o      \
-                           axi4_rw_signal_printer.o   \
                            $(END_LIST)
 
 axi4_core.o                : axi4_types.o $(DUMMY_PLUG_CORE_PACKAGE)
 axi4_models.o              : axi4_types.o $(DUMMY_PLUG_CORE_PACKAGE)
 axi4_signal_printer.o      : axi4_types.o $(DUMMY_PLUG_CORE_PACKAGE)
-axi4_rw_signal_printer.o   : axi4_types.o $(DUMMY_PLUG_CORE_PACKAGE)
 axi4_channel_player.o      : axi4_types.o axi4_core.o 
-axi4_core_player.o         : axi4_types.o axi4_core.o axi4_channel_player.o
-axi4_master_player.o       : axi4_types.o axi4_core.o axi4_core_player.o
-axi4_slave_player.o        : axi4_types.o axi4_core.o axi4_core_player.o 
+axi4_master_player.o       : axi4_types.o axi4_core.o axi4_channel_player.o
+axi4_slave_player.o        : axi4_types.o axi4_core.o axi4_channel_player.o
 
 axi4_types.o               : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_types.vhd
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
@@ -73,9 +70,6 @@ axi4_core.o                : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_core.vhd
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
 axi4_models.o              : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_models.vhd
-	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
-
-axi4_core_player.o         : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_core_player.vhd 
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
 axi4_channel_player.o      : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_channel_player.vhd 
@@ -88,9 +82,6 @@ axi4_slave_player.o        : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_slave_player.vhd
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
 axi4_signal_printer.o      : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_signal_printer.vhd  
-	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
-
-axi4_rw_signal_printer.o   : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_rw_signal_printer.vhd  
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
 
