--- a/sim/ghdl/Makefile
+++ b/sim/ghdl/Makefile
@@ -6,6 +6,9 @@ SRC_TEST_VHDL_PATH=../../src/test/vhdl
 
 TEST_BENCH = dummy_plug_reader_test_1 \
              dummy_plug_axi4_test_1_1 \
+             dummy_plug_axi4_test_1_2 \
+             dummy_plug_axi4_test_1_3 \
+             dummy_plug_axi4_test_1_4 \
              $(END_LIST)
 
 all: $(TEST_BENCH)
@@ -91,6 +94,15 @@ dummy_plug_axi4_test_1.o   : $(SRC_TEST_VHDL_PATH)/dummy_plug/axi4_test_1.vhd   
 	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
 
 dummy_plug_axi4_test_1_1.o : $(SRC_TEST_VHDL_PATH)/dummy_plug/axi4_test_1_1.vhd dummy_plug_axi4_test_1.o $(DUMMY_PLUG_AXI4)
+	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
+
+dummy_plug_axi4_test_1_2.o : $(SRC_TEST_VHDL_PATH)/dummy_plug/axi4_test_1_2.vhd dummy_plug_axi4_test_1.o $(DUMMY_PLUG_AXI4)
+	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
+
+dummy_plug_axi4_test_1_3.o : $(SRC_TEST_VHDL_PATH)/dummy_plug/axi4_test_1_3.vhd dummy_plug_axi4_test_1.o $(DUMMY_PLUG_AXI4)
+	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
+
+dummy_plug_axi4_test_1_4.o : $(SRC_TEST_VHDL_PATH)/dummy_plug/axi4_test_1_4.vhd dummy_plug_axi4_test_1.o $(DUMMY_PLUG_AXI4)
 	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
 
 axi_master_bfm.o           : $(SRC_TEST_VHDL_PATH)/dummy_plug/axi_master_bfm.vhd
