entityを含むVHDLファイルからcomponentを集めたpackageを作るツール(tools/MakeComponentPackage.rb)を追加.

--- a/src/main/vhdl/axi4/Makefile
+++ b/src/main/vhdl/axi4/Makefile
@@ -4,13 +4,13 @@ ENTITY_FILES = axi4_master_player.vhd  \
                ${ENDLIST}
 
 axi4_models.vhd : ${ENTITY_FILES}
-	../../../../tools/MakeComponentPackage -verbose \
-            -title   'AXI4 Dummy Plug Component Package' \
-            -version 1.0.1 \
-            -author  'Ichiro Kawazome <ichiro_k@ca2.so-net.ne.jp>' \
-            -library DUMMY_PLUG \
-            -package AXI4_MODELS \
-            -output  axi4_models.vhd \
+	../../../../tools/MakeComponentPackage.rb --verbose \
+            --brief   'AXI4 Dummy Plug Component Package' \
+            --version 1.0.1 \
+            --author  'Ichiro Kawazome <ichiro_k@ca2.so-net.ne.jp>' \
+            --library DUMMY_PLUG \
+            --package AXI4_MODELS \
+            --output  axi4_models.vhd \
             ${ENTITY_FILES}
 
 clean:
