--- a/sim/ghdl/axi4/Makefile
+++ b/sim/ghdl/axi4/Makefile
@@ -4,11 +4,12 @@ WORK=dummy_plug
 SRC_MAIN_VHDL_PATH=../../../src/main/vhdl
 SRC_TEST_VHDL_PATH=../../../src/test/vhdl
 
-TEST_BENCH = dummy_plug_reader_test_1 \
-             dummy_plug_axi4_test_1_1 \
-             dummy_plug_axi4_test_1_2 \
-             dummy_plug_axi4_test_1_3 \
-             dummy_plug_axi4_test_1_4 \
+TEST_BENCH = dummy_plug_reader_test_1        \
+             dummy_plug_axi4_test_1_1        \
+             dummy_plug_axi4_test_1_2        \
+             dummy_plug_axi4_test_1_3        \
+             dummy_plug_axi4_test_1_4        \
+             dummy_plug_axi4_stream_test_1_1 \
              $(END_LIST)
 
 all: $(TEST_BENCH)
@@ -50,12 +51,14 @@ marchal.o                  : $(DUMMY_PLUG_CORE_SRC_PATH)/marchal.vhd
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
 DUMMY_PLUG_AXI4_SRC_PATH = $(SRC_MAIN_VHDL_PATH)/axi4
-DUMMY_PLUG_AXI4_PACKAGE  = axi4_types.o axi4_models.o
-DUMMY_PLUG_AXI4          = $(DUMMY_PLUG_CORE)         \
-                           $(DUMMY_PLUG_AXI4_PACKAGE) \
-                           axi4_master_player.o       \
-                           axi4_slave_player.o        \
-                           axi4_signal_printer.o      \
+DUMMY_PLUG_AXI4_PACKAGE  = axi4_types.o axi4_models.o 
+DUMMY_PLUG_AXI4          = $(DUMMY_PLUG_CORE)          \
+                           $(DUMMY_PLUG_AXI4_PACKAGE)  \
+                           axi4_master_player.o        \
+                           axi4_slave_player.o         \
+                           axi4_stream_master_player.o \
+                           axi4_stream_slave_player.o  \
+                           axi4_signal_printer.o       \
                            $(END_LIST)
 
 axi4_core.o                : axi4_types.o $(DUMMY_PLUG_CORE_PACKAGE)
@@ -64,6 +67,9 @@ axi4_signal_printer.o      : axi4_types.o $(DUMMY_PLUG_CORE_PACKAGE)
 axi4_channel_player.o      : axi4_types.o axi4_core.o 
 axi4_master_player.o       : axi4_types.o axi4_core.o axi4_channel_player.o
 axi4_slave_player.o        : axi4_types.o axi4_core.o axi4_channel_player.o
+axi4_stream_player.o       : axi4_types.o axi4_core.o
+axi4_stream_master_player.o: axi4_types.o axi4_core.o axi4_stream_player.o
+axi4_stream_slave_player.o : axi4_types.o axi4_core.o axi4_stream_player.o
 
 axi4_types.o               : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_types.vhd
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
@@ -81,6 +87,15 @@ axi4_master_player.o       : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_master_player.vhd
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
 axi4_slave_player.o        : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_slave_player.vhd  
+	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
+
+axi4_stream_player.o       : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_stream_player.vhd 
+	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
+
+axi4_stream_master_player.o: $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_stream_master_player.vhd 
+	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
+
+axi4_stream_slave_player.o : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_stream_slave_player.vhd 
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
 axi4_signal_printer.o      : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_signal_printer.vhd  
@@ -103,5 +118,11 @@ dummy_plug_axi4_test_1_3.o : $(SRC_TEST_VHDL_PATH)/axi4/axi4_test_1_3.vhd dummy_
 	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
 
 dummy_plug_axi4_test_1_4.o : $(SRC_TEST_VHDL_PATH)/axi4/axi4_test_1_4.vhd dummy_plug_axi4_test_1.o $(DUMMY_PLUG_AXI4)
+	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
+
+dummy_plug_axi4_stream_test_1.o   : $(SRC_TEST_VHDL_PATH)/axi4/axi4_stream_test_1.vhd   $(DUMMY_PLUG_AXI4)
+	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
+
+dummy_plug_axi4_stream_test_1_1.o : $(SRC_TEST_VHDL_PATH)/axi4/axi4_stream_test_1_1.vhd dummy_plug_axi4_stream_test_1.o $(DUMMY_PLUG_AXI4)
 	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
 
