--- a/src/main/vhdl/axi4/Makefile
+++ b/src/main/vhdl/axi4/Makefile
@@ -3,12 +3,13 @@ ENTITY_FILES = axi4_master_player.vhd         \
                axi4_stream_master_player.vhd  \
                axi4_stream_slave_player.vhd   \
                axi4_signal_printer.vhd        \
+               axi4_stream_signal_printer.vhd \
                ${ENDLIST}
 
 axi4_models.vhd : ${ENTITY_FILES}
 	../../../../tools/MakeComponentPackage.rb --verbose \
             --brief   'AXI4 Dummy Plug Component Package' \
-            --version 1.2.0 \
+            --version 1.2.1 \
             --author  'Ichiro Kawazome <ichiro_k@ca2.so-net.ne.jp>' \
             --library DUMMY_PLUG \
             --package AXI4_MODELS \
