sim/ghdl/dummy_plug の Makefile に AXI4-Stream BFM を追加.

--- a/sim/ghdl/dummy_plug/Makefile
+++ b/sim/ghdl/dummy_plug/Makefile
@@ -9,10 +9,13 @@ CORE          = $(CORE_PACKAGE) marchal.o
 
 AXI4_SRC_PATH = $(SRC_MAIN_VHDL_PATH)/axi4
 AXI4_PACKAGE  = axi4_types.o axi4_models.o
-AXI4          = $(AXI4_PACKAGE)            \
-                axi4_master_player.o       \
-                axi4_slave_player.o        \
-                axi4_signal_printer.o      \
+AXI4          = $(AXI4_PACKAGE)              \
+                axi4_master_player.o         \
+                axi4_slave_player.o          \
+                axi4_signal_printer.o        \
+                axi4_stream_master_player.o  \
+                axi4_stream_slave_player.o   \
+                axi4_stream_signal_printer.o \
                 $(END_LIST)
 
 all: $(CORE) $(AXI4)
@@ -50,31 +53,46 @@ mt19937ar.o                : $(CORE_SRC_PATH)/mt19937ar.vhd
 tinymt32.o                 : $(CORE_SRC_PATH)/tinymt32.vhd
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
-axi4_core.o                : axi4_types.o $(CORE_PACKAGE)
-axi4_models.o              : axi4_types.o $(CORE_PACKAGE)
-axi4_signal_printer.o      : axi4_types.o $(CORE_PACKAGE)
-axi4_channel_player.o      : axi4_types.o axi4_core.o 
-axi4_master_player.o       : axi4_types.o axi4_core.o axi4_channel_player.o
-axi4_slave_player.o        : axi4_types.o axi4_core.o axi4_channel_player.o
+axi4_core.o                  : axi4_types.o $(CORE_PACKAGE)
+axi4_models.o                : axi4_types.o $(CORE_PACKAGE)
+axi4_signal_printer.o        : axi4_types.o $(CORE_PACKAGE)
+axi4_stream_signal_printer.o : axi4_types.o $(CORE_PACKAGE)
+axi4_channel_player.o        : axi4_types.o axi4_core.o 
+axi4_master_player.o         : axi4_types.o axi4_core.o axi4_channel_player.o
+axi4_slave_player.o          : axi4_types.o axi4_core.o axi4_channel_player.o
+axi4_stream_master_player.o  : axi4_types.o axi4_core.o axi4_stream_player.o
+axi4_stream_slave_player.o   : axi4_types.o axi4_core.o axi4_stream_player.o
 
-axi4_types.o               : $(AXI4_SRC_PATH)/axi4_types.vhd
+axi4_types.o                 : $(AXI4_SRC_PATH)/axi4_types.vhd
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
-axi4_core.o                : $(AXI4_SRC_PATH)/axi4_core.vhd   
+axi4_core.o                  : $(AXI4_SRC_PATH)/axi4_core.vhd   
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
-axi4_models.o              : $(AXI4_SRC_PATH)/axi4_models.vhd
+axi4_models.o                : $(AXI4_SRC_PATH)/axi4_models.vhd
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
-axi4_channel_player.o      : $(AXI4_SRC_PATH)/axi4_channel_player.vhd 
+axi4_channel_player.o        : $(AXI4_SRC_PATH)/axi4_channel_player.vhd 
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
-axi4_master_player.o       : $(AXI4_SRC_PATH)/axi4_master_player.vhd 
+axi4_master_player.o         : $(AXI4_SRC_PATH)/axi4_master_player.vhd 
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
-axi4_slave_player.o        : $(AXI4_SRC_PATH)/axi4_slave_player.vhd  
+axi4_slave_player.o          : $(AXI4_SRC_PATH)/axi4_slave_player.vhd  
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
-axi4_signal_printer.o      : $(AXI4_SRC_PATH)/axi4_signal_printer.vhd  
+axi4_signal_printer.o        : $(AXI4_SRC_PATH)/axi4_signal_printer.vhd  
+	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
+
+axi4_stream_player.o         : $(AXI4_SRC_PATH)/axi4_stream_player.vhd 
+	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
+
+axi4_stream_master_player.o  : $(AXI4_SRC_PATH)/axi4_stream_master_player.vhd 
+	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
+
+axi4_stream_slave_player.o   : $(AXI4_SRC_PATH)/axi4_stream_slave_player.vhd  
+	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
+
+axi4_stream_signal_printer.o : $(AXI4_SRC_PATH)/axi4_stream_signal_printer.vhd  
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
