src/test/vhdl/axi4/axi4_stream_test_1_1.vhd を nvc で動作するようにした.

--- a/sim/nvc/lib/Makefile
+++ b/sim/nvc/lib/Makefile
@@ -17,6 +17,7 @@ dummy_plug_data = \
 	dummy_plug/DUMMY_PLUG.AXI4_SLAVE_PLAYER          \
 	dummy_plug/DUMMY_PLUG.AXI4_STREAM_PLAYER         \
 	dummy_plug/DUMMY_PLUG.AXI4_MASTER_PLAYER         \
+	dummy_plug/DUMMY_PLUG.AXI4_STREAM_MASTER_PLAYER  \
 	dummy_plug/DUMMY_PLUG.AXI4_STREAM_SLAVE_PLAYER   \
 	dummy_plug/DUMMY_PLUG.AXI4_STREAM_SIGNAL_PRINTER \
 	$(ENDLIST)
