src/test/vhdl/core/reader_test_1.vhd を nvc で動作するようにした.

--- a/sim/nvc/axi4/Makefile
+++ b/sim/nvc/axi4/Makefile
@@ -3,7 +3,8 @@ SRC_MAIN_VHDL_PATH=../../../src/main/vhdl
 SRC_TEST_VHDL_PATH=../../../src/test/vhdl
 SRC_TEST_SCENARIO_PATH=../../../src/test/scenarios
 
-TEST_BENCH = dummy_plug_axi4_test_1_1        \
+TEST_BENCH = dummy_plug_reader_test_1        \
+             dummy_plug_axi4_test_1_1        \
              dummy_plug_axi4_test_1_2        \
              dummy_plug_axi4_test_1_3        \
              dummy_plug_axi4_test_1_4        \
@@ -14,6 +15,9 @@ all: $(TEST_BENCH)
 
 clean:
 	rm -r work
+
+dummy_plug_reader_test_1 : work/_WORK.DUMMY_PLUG_READER_TEST_1.final.so $(SRC_TEST_SCENARIO_PATH)/core/reader_test_1.snr
+	-$(NVC) -L ../lib/ -r DUMMY_PLUG_READER_TEST_1
 
 dummy_plug_axi4_test_1_1 : work/_WORK.DUMMY_PLUG_AXI4_TEST_1_1.final.so $(SRC_TEST_SCENARIO_PATH)/axi4/axi4_test_1_1.snr
 	-$(NVC) -L ../lib/ -r DUMMY_PLUG_AXI4_TEST_1_1
@@ -29,6 +33,9 @@ dummy_plug_axi4_test_1_4 : work/_WORK.DUMMY_PLUG_AXI4_TEST_1_4.final.so $(SRC_TE
 
 dummy_plug_axi4_stream_test_1_1 : work/_WORK.DUMMY_PLUG_AXI4_STREAM_TEST_1_1.final.so $(SRC_TEST_SCENARIO_PATH)/axi4/axi4_stream_test_1_1.snr
 	-$(NVC) -L ../lib/ -r DUMMY_PLUG_AXI4_STREAM_TEST_1_1
+
+work/_WORK.DUMMY_PLUG_READER_TEST_1.final.so : work/WORK.DUMMY_PLUG_READER_TEST_1
+	$(NVC) -L ../lib/ -e DUMMY_PLUG_READER_TEST_1
 
 work/_WORK.DUMMY_PLUG_AXI4_TEST_1_1.final.so : work/WORK.DUMMY_PLUG_AXI4_TEST_1_1 work/WORK.DUMMY_PLUG_AXI4_TEST_1
 	$(NVC) -L ../lib/ -e DUMMY_PLUG_AXI4_TEST_1_1
