--- a/sim/ghdl-0.35/axi4/Makefile
+++ b/sim/ghdl-0.35/axi4/Makefile
@@ -11,6 +11,7 @@ TEST_BENCH = dummy_plug_reader_test_1        \
              dummy_plug_axi4_test_1_3        \
              dummy_plug_axi4_test_1_4        \
              dummy_plug_axi4_stream_test_1_1 \
+             dummy_plug_axi4_memory_test_1   \
              $(END_LIST)
 
 all: $(TEST_BENCH)
@@ -57,6 +58,7 @@ DUMMY_PLUG_AXI4          = $(DUMMY_PLUG_CORE)           \
                            $(DUMMY_PLUG_AXI4_PACKAGE)   \
                            axi4_master_player.o         \
                            axi4_slave_player.o          \
+                           axi4_memory_player.o         \
                            axi4_stream_master_player.o  \
                            axi4_stream_slave_player.o   \
                            axi4_signal_printer.o        \
@@ -73,7 +75,7 @@ axi4_slave_player.o            : axi4_types.o axi4_core.o axi4_channel_player.o
 axi4_stream_player.o           : axi4_types.o axi4_core.o
 axi4_stream_master_player.o    : axi4_types.o axi4_core.o axi4_stream_player.o
 axi4_stream_slave_player.o     : axi4_types.o axi4_core.o axi4_stream_player.o
-
+axi4_memory_player.o           : axi4_types.o axi4_core.o
 
 axi4_types.o                       : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_types.vhd
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
@@ -91,6 +93,9 @@ axi4_master_player.o               : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_master_pla
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
 axi4_slave_player.o                : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_slave_player.vhd  
+	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
+
+axi4_memory_player.o               : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_memory_player.vhd  
 	 $(GHDL) -a $(GHDLFLAGS) --work=$(WORK) $<
 
 axi4_stream_player.o               : $(DUMMY_PLUG_AXI4_SRC_PATH)/axi4_stream_player.vhd 
@@ -131,5 +136,8 @@ dummy_plug_axi4_stream_test_1.o    : $(SRC_TEST_VHDL_PATH)/axi4/axi4_stream_test
 	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
 
 dummy_plug_axi4_stream_test_1_1.o  : $(SRC_TEST_VHDL_PATH)/axi4/axi4_stream_test_1_1.vhd dummy_plug_axi4_stream_test_1.o $(DUMMY_PLUG_AXI4)
+	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
+
+dummy_plug_axi4_memory_test_1.o    : $(SRC_TEST_VHDL_PATH)/axi4/axi4_memory_test_1.vhd   $(DUMMY_PLUG_AXI4)
 	 $(GHDL) -a $(GHDLFLAGS) --work=work $<
 
