[add] axi4_test_1_5 to sim/nvc/axi4/Makefile

--- a/sim/nvc/axi4/Makefile
+++ b/sim/nvc/axi4/Makefile
@@ -10,6 +10,7 @@ TEST_BENCH = dummy_plug_reader_test_1        \
              dummy_plug_axi4_test_1_2        \
              dummy_plug_axi4_test_1_3        \
              dummy_plug_axi4_test_1_4        \
+             dummy_plug_axi4_test_1_5        \
              dummy_plug_axi4_stream_test_1_1 \
              $(END_LIST)
 
@@ -37,6 +38,9 @@ dummy_plug_axi4_test_1_3 : work/WORK.DUMMY_PLUG_AXI4_TEST_1_3.elab $(SRC_TEST_SC
 dummy_plug_axi4_test_1_4 : work/WORK.DUMMY_PLUG_AXI4_TEST_1_4.elab $(SRC_TEST_SCENARIO_PATH)/axi4/axi4_test_1_4.snr
 	-$(NVC) -L ../lib/ -r DUMMY_PLUG_AXI4_TEST_1_4
 
+dummy_plug_axi4_test_1_5 : work/WORK.DUMMY_PLUG_AXI4_TEST_1_5.elab $(SRC_TEST_SCENARIO_PATH)/axi4/axi4_test_1_5.snr
+	-$(NVC) -L ../lib/ -r DUMMY_PLUG_AXI4_TEST_1_5
+
 dummy_plug_axi4_stream_test_1_1 : work/WORK.DUMMY_PLUG_AXI4_STREAM_TEST_1_1.elab $(SRC_TEST_SCENARIO_PATH)/axi4/axi4_stream_test_1_1.snr
 	-$(NVC) -L ../lib/ -r DUMMY_PLUG_AXI4_STREAM_TEST_1_1
 
@@ -55,6 +59,9 @@ work/WORK.DUMMY_PLUG_AXI4_TEST_1_3.elab : work/WORK.DUMMY_PLUG_AXI4_TEST_1_3 wor
 work/WORK.DUMMY_PLUG_AXI4_TEST_1_4.elab : work/WORK.DUMMY_PLUG_AXI4_TEST_1_4 work/WORK.DUMMY_PLUG_AXI4_TEST_1
 	$(NVC) -L ../lib/ -e DUMMY_PLUG_AXI4_TEST_1_4
 
+work/WORK.DUMMY_PLUG_AXI4_TEST_1_5.elab : work/WORK.DUMMY_PLUG_AXI4_TEST_1_5 work/WORK.DUMMY_PLUG_AXI4_TEST_1
+	$(NVC) -L ../lib/ -e DUMMY_PLUG_AXI4_TEST_1_5
+
 work/WORK.DUMMY_PLUG_AXI4_STREAM_TEST_1_1.elab : work/WORK.DUMMY_PLUG_AXI4_STREAM_TEST_1_1 work/WORK.DUMMY_PLUG_AXI4_STREAM_TEST_1
 	$(NVC) -L ../lib/ -e DUMMY_PLUG_AXI4_STREAM_TEST_1_1
 
@@ -63,6 +70,7 @@ analyze: work/WORK.DUMMY_PLUG_AXI4_TEST_1          \
          work/WORK.DUMMY_PLUG_AXI4_TEST_1_2        \
          work/WORK.DUMMY_PLUG_AXI4_TEST_1_3        \
          work/WORK.DUMMY_PLUG_AXI4_TEST_1_4        \
+         work/WORK.DUMMY_PLUG_AXI4_TEST_1_5        \
          work/WORK.DUMMY_PLUG_AXI4_STREAM_TEST_1   \
          work/WORK.DUMMY_PLUG_AXI4_STREAM_TEST_1_1
 
@@ -82,6 +90,9 @@ work/WORK.DUMMY_PLUG_AXI4_TEST_1_3 : $(SRC_TEST_VHDL_PATH)/axi4/axi4_test_1_3.vh
 	$(NVC) -L ../lib/ -a $<
 
 work/WORK.DUMMY_PLUG_AXI4_TEST_1_4 : $(SRC_TEST_VHDL_PATH)/axi4/axi4_test_1_4.vhd                $(LIB_DUMMY_PLUG)
+	$(NVC) -L ../lib/ -a $<
+
+work/WORK.DUMMY_PLUG_AXI4_TEST_1_5 : $(SRC_TEST_VHDL_PATH)/axi4/axi4_test_1_5.vhd                $(LIB_DUMMY_PLUG)
 	$(NVC) -L ../lib/ -a $<
 
 work/WORK.DUMMY_PLUG_AXI4_STREAM_TEST_1   : $(SRC_TEST_VHDL_PATH)/axi4/axi4_stream_test_1.vhd    $(LIB_DUMMY_PLUG)
